--- a/Pipfile
+++ b/Pipfile
@@ -8,30 +8,37 @@ url = "https://test.pypi.org/simple"
 verify_ssl = true
 name = "test-pypi"
 
+[packages]
+# we don't specify dependencies for the library here for intallation as per: https://pipenv-fork.readthedocs.io/en/latest/advanced.html#pipfile-vs-setuppy
+# aea and plugin dependencies are specified in setup.py
+# pending upstream releases.
+# solana = "==0.29.2"
+# anchorpy = {git = "https://github.com/kevinheavey/anchorpy.git@a3cc292574679bae1610e01ab69161b6614bca9"}
+
 [dev-packages]
 # we fix exact versions as it's sufficient to have at least one set of compatible dependencies for development
 setuptools = "==59.6.0"
-aiohttp = "==3.7.4.post0"
-asn1crypto = "==1.4.0"
+aiohttp = "<3.8,>=3.7.4"
+asn1crypto = "<1.5.0,>=1.4.0"
 bech32 = "==1.2.0"
 defusedxml = "==0.6.0"
 # ^ still used?
 docker = "==4.2.0"
 ecdsa = ">=0.15"
-eth-account = ">=0.8.0,<0.9.0"
+eth-account = "<0.9.0,>=0.8.0"
 gym = "==0.15.6"
 hypothesis = "==6.21.6"
 ipfshttpclient = "==0.8.0a2"
 liccheck = "==0.6.0"
-matplotlib = ">=3.3.0,<3.4"
+matplotlib = "<3.4,>=3.3.0"
 memory-profiler = "==0.57.0"
 # ^ still used?
 numpy = ">=1.18.1"
 openapi-core = "==0.13.2"
 openapi-spec-validator = "==0.2.8"
-packaging = ">=23.1,<24.0"
+packaging = "<24.0,>=23.1"
 pexpect = "==4.8.0"
-protobuf = ">=4.21.6,<5.0.0"
+protobuf = "<5.0.0,>=4.21.6"
 psutil = "==5.7.0"
 pycryptodome = ">=3.10.1"
 pytest-custom-exit-code = "==0.3.0"
@@ -39,7 +46,7 @@ GitPython = "==3.1.27"
 requests = "==2.28.1"
 idna = "<=3.3"
 open-aea-cosmpy = "==0.6.6"
-web3 = ">=6.0.0,<7"
+web3 = "<7,>=6.0.0"
 semver = "<3.0.0,>=2.9.1"
 py-multibase = ">=1.0.0"
 py-multicodec = ">=0.2.0"
@@ -52,11 +59,7 @@ docspec-python = "==2.2.1"
 hexbytes = "==0.3.0"
 ledgerwallet = "==0.1.3"
 construct = "<=2.10.61"
-
-[packages]
-# we don't specify dependencies for the library here for intallation as per: https://pipenv-fork.readthedocs.io/en/latest/advanced.html#pipfile-vs-setuppy
-# aea and plugin dependencies are specified in setup.py
-
-# pending upstream releases.
-# solana = "==0.29.2"
-# anchorpy = {git = "https://github.com/kevinheavey/anchorpy.git@a3cc292574679bae1610e01ab69161b6614bca9"}
+toml = "==0.10.2"
+werkzeug = "*"
+pytest-asyncio = "*"
+multidict = "*"
