--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,13 @@ skip_missing_interpreters = true
 [packages-deps]
 deps = 
     gym==0.15.6
-    aiohttp==3.7.4.post0
+    aiohttp<3.8,>=3.7.4
     gym==0.15.6
     hypothesis==6.21.6
     numpy>=1.18.1
     openapi-core==0.13.2
     openapi-spec-validator==0.2.8
-    asn1crypto==1.4.0
+    asn1crypto<1.5.0,>=1.4.0
     tomte[tests]==0.2.13
 
 [tests-common]
@@ -28,10 +28,10 @@ deps =
     docker==4.2.0
     pexpect==4.8.0
     GitPython==3.1.27
-    packaging>=23.1,<24.0
+    packaging<24.0,>=23.1
     py-multibase>=1.0.0
     py-multicodec>=0.2.0
-    protobuf>=4.21.6,<5.0.0
+    protobuf<5.0.0,>=4.21.6
     requests==2.28.1
     mistune==2.0.3
     tomte[isort]==0.2.13
@@ -41,12 +41,12 @@ deps =
     ; because we use --no-deps to install the plugins.
     ; aea_ledger_cosmos/aea_ledger_fetchai
     ecdsa>=0.15
-    asn1crypto==1.4.0
+    asn1crypto<1.5.0,>=1.4.0
     bech32==1.2.0
     ; aea_ledger_ethereum
-    web3>=6.0.0,<7
+    web3<7,>=6.0.0
     ipfshttpclient==0.8.0a2
-    eth-account>=0.8.0,<0.9.0
+    eth-account<0.9.0,>=0.8.0
     ; for password encryption in cosmos
     pycryptodome>=3.10.1
     open-aea-cosmpy==0.6.6
@@ -59,8 +59,18 @@ deps =
     ledgerwallet==0.1.3
     construct<=2.10.61
     defusedxml==0.6.0
-    semver>=2.9.1,<3.0.0
-    
+    semver<3.0.0,>=2.9.1
+
+[extra-deps]
+deps = 
+    matplotlib<3.4,>=3.3.0
+    memory-profiler==0.57.0
+    multidict
+    pytest-asyncio
+    toml==0.10.2
+    werkzeug
+; end-extra
+
 [testenv]
 basepython = python3.10
 whitelist_externals = /bin/sh
@@ -400,8 +410,7 @@ commands =
 skipsdist = True
 skip_install = True
 passenv = *
-deps =
-    .[all]
+deps = .[all]
 whitelist_externals = /bin/sh
 commands =
     - /bin/sh -c "rm -fr ./*private_key.txt"
