--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,8 @@ name = "test-pypi"
 
 [dev-packages]
 # we fix exact versions as it's sufficient to have at least one set of compatible dependencies for development
-setuptools = "==59.6.0"
-aiohttp = "==3.7.4.post0"
+setuptools = ">=65.5.1"
+aiohttp = ">=3.8.5,<4.0.0"
 asn1crypto = "==1.4.0"
 bech32 = "==1.2.0"
 defusedxml = "==0.6.0"
@@ -35,8 +35,8 @@ protobuf = ">=4.21.6,<5.0.0"
 psutil = "==5.7.0"
 pycryptodome = ">=3.10.1"
 pytest-custom-exit-code = "==0.3.0"
-GitPython = "==3.1.27"
-requests = "==2.28.1"
+GitPython = "<4.0.0,>=3.1.37"
+requests = ">=2.31.0,<3.0.0"
 idna = "<=3.3"
 open-aea-cosmpy = "==0.6.7"
 web3 = ">=6.0.0,<7"
