--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ skip_missing_interpreters = true
 [packages-deps]
 deps = 
     gym==0.15.6
-    aiohttp==3.7.4.post0
+    aiohttp>=3.8.5,<4.0.0
     gym==0.15.6
     hypothesis==6.21.6
     numpy>=1.18.1
@@ -27,12 +27,12 @@ deps =
     {[packages-deps]deps}
     docker==4.2.0
     pexpect==4.8.0
-    GitPython==3.1.27
+    GitPython<4.0.0,>=3.1.37
     packaging>=23.1,<24.0
     py-multibase>=1.0.0
     py-multicodec>=0.2.0
     protobuf>=4.21.6,<5.0.0
-    requests==2.28.1
+    requests>=2.31.0,<3.0.0
     mistune==2.0.3
     tomte[isort]==0.2.13
     tomte[black]==0.2.13
@@ -55,7 +55,7 @@ deps =
     idna<=3.3
     numpy>=1.18.1
     psutil==5.7.0
-    setuptools==59.6.0
+    setuptools>=65.5.1
     ledgerwallet==0.1.3
     construct<=2.10.61
     defusedxml==0.6.0
@@ -67,7 +67,7 @@ whitelist_externals = /bin/sh
 passenv = *
 extras = all
 deps =
-    setuptools==59.6.0
+    setuptools>=65.5.1
 
 [commands-local-install]
 commands = 
