--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ name = "test-pypi"
 
 [dev-packages]
 # we fix exact versions as it's sufficient to have at least one set of compatible dependencies for development
-setuptools = ">=65.5.1"
+setuptools = "==59.6.0"
 aiohttp = ">=3.8.5,<4.0.0"
 asn1crypto = "==1.4.0"
 bech32 = "==1.2.0"
