--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,7 @@ deps =
     idna<=3.3
     numpy>=1.18.1
     psutil==5.7.0
-    setuptools>=65.5.1
+    setuptools==59.6.0
     ledgerwallet==0.1.3
     construct<=2.10.61
     defusedxml==0.6.0
@@ -67,7 +67,7 @@ whitelist_externals = /bin/sh
 passenv = *
 extras = all
 deps =
-    setuptools>=65.5.1
+    setuptools==59.6.0
 
 [commands-local-install]
 commands = 
