--- a/Pipfile
+++ b/Pipfile
@@ -36,7 +36,7 @@ psutil = "==5.7.0"
 pycryptodome = ">=3.10.1"
 pytest-custom-exit-code = "==0.3.0"
 GitPython = "<4.0.0,>=3.1.37"
-requests = ">=2.31.0,<3.0.0"
+requests = "==2.28.1"
 idna = "<=3.3"
 open-aea-cosmpy = "==0.6.7"
 web3 = ">=6.0.0,<7"
