--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ deps =
     py-multibase>=1.0.0
     py-multicodec>=0.2.0
     protobuf>=4.21.6,<5.0.0
-    requests>=2.31.0,<3.0.0
+    requests==2.28.1
     mistune==2.0.3
     tomte[isort]==0.2.13
     tomte[black]==0.2.13
