--- a/setup.cfg
+++ b/setup.cfg
@@ -321,6 +321,9 @@ ignore_missing_imports=True
 [mypy-asyncio.*]
 ignore_missing_imports=True
 
+[mypy-toml.*]
+ignore_missing_imports=True
+
 [darglint]
 docstring_style=sphinx
 strictness=short
