--- a/setup.cfg
+++ b/setup.cfg
@@ -324,6 +324,9 @@ ignore_missing_imports=True
 [mypy-toml.*]
 ignore_missing_imports=True
 
+[mypy-attr.*]
+ignore_missing_imports=True
+
 [darglint]
 docstring_style=sphinx
 strictness=short
