--- a/Pipfile
+++ b/Pipfile
@@ -41,7 +41,7 @@ pytest-custom-exit-code = "==0.3.0"
 GitPython = "<4.0.0,>=3.1.37"
 requests = "==2.28.1"
 idna = "<=3.3"
-open-aea-cosmpy = "==0.6.7"
+cosmpy = "==0.9.2"
 web3 = "<7,>=6.0.0"
 semver = "<3.0.0,>=2.9.1"
 py-multibase = ">=1.0.0"
