--- a/packages/valory/connections/ledger/connection.yaml
+++ b/packages/valory/connections/ledger/connection.yaml
@@ -104,6 +104,13 @@ config:
       gas_price_strategies: *id001
       is_gas_estimation_enabled: true
       poa_chain: true
+    optimism:
+      address: http://127.0.0.1:8545
+      chain_id: 10
+      default_gas_price_strategy: eip1559
+      gas_price_strategies: *id001
+      is_gas_estimation_enabled: true
+      poa_chain: false
   retry_attempts: 240
   retry_timeout: 3
 excluded_protocols: []
