--- a/packages/valory/connections/ledger/connection.yaml
+++ b/packages/valory/connections/ledger/connection.yaml
@@ -125,6 +125,20 @@ config:
       gas_price_strategies: *id001
       is_gas_estimation_enabled: true
       poa_chain: false
+    polygon:
+      address: http://127.0.0.1:8545
+      chain_id: 137
+      default_gas_price_strategy: eip1559
+      gas_price_strategies: *id001
+      is_gas_estimation_enabled: true
+      poa_chain: false
+    fraxtal:
+      address: http://127.0.0.1:8545
+      chain_id: 252
+      default_gas_price_strategy: eip1559
+      gas_price_strategies: *id001
+      is_gas_estimation_enabled: true
+      poa_chain: false
   retry_attempts: 240
   retry_timeout: 3
 excluded_protocols: []
