--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -433,7 +433,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-14-large, windows-latest]
+        os: [ubuntu-latest, windows-latest]
         python_version: ['3.8', '3.9', '3.10', '3.11']
     timeout-minutes: 120
     steps:
