--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -240,7 +240,7 @@ jobs:
     continue-on-error: False
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-12, windows-latest]
+        os: [ubuntu-latest, macos-latest-large, windows-latest]
         python_version: ["3.10",]
     timeout-minutes: 10
     runs-on: ${{ matrix.os }}
@@ -271,7 +271,7 @@ jobs:
         sys:
           - { os: windows-latest, shell: "msys2 {0}" }
           - { os: ubuntu-latest, shell: bash }
-#          - { os: macos-12, shell: bash }
+#          - { os: macos-latest-large, shell: bash }
         python_version: ["3.10",]
     timeout-minutes: 15
     steps:
@@ -433,7 +433,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-12, windows-latest]
+        os: [ubuntu-latest, macos-latest-large, windows-latest]
         python_version: ['3.8', '3.9', '3.10', '3.11']
     timeout-minutes: 120
     steps:
@@ -469,8 +469,8 @@ jobs:
       # sudo apt-get install -y protobuf-compiler
       # use sudo rm /var/lib/apt/lists/lock above in line above update if dependency install failures persist
       # use sudo apt-get dist-upgrade above in line below update if dependency install failures persist
-      - if: matrix.os == 'macos-12'
-        name: Install dependencies (macos-12)
+      - if: matrix.os == 'macos-latest-large'
+        name: Install dependencies (macos-latest-large)
         run: |
           pip install tomte[tox]==0.2.13
           brew install gcc
@@ -558,7 +558,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-12, windows-latest]
+        os: [ubuntu-latest, macos-latest-large, windows-latest]
         python-version: ["3.10"]
     timeout-minutes: 45
     steps:
