--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,9 +52,9 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5.2.0
         with:
-          go-version: "1.17.7"
+          go-version: '1.20.0'
       - name: Install dependencies (ubuntu-latest)
         run: |
           sudo apt-get update --fix-missing
@@ -112,9 +112,9 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5.2.0
         with:
-          go-version: "1.17.7"
+          go-version: '1.20.0'
       - name: Install dependencies (ubuntu-latest)
         run: |
           sudo apt-get update --fix-missing
@@ -228,9 +228,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5.2.0
         with:
-          go-version: "1.17.7"
+          go-version: '1.20.0'
       - run: |
           wget https://github.com/zricethezav/gitleaks/releases/download/v8.10.1/gitleaks_8.10.1_linux_x64.tar.gz && \
           tar -xzf gitleaks_8.10.1_linux_x64.tar.gz && \
@@ -311,9 +311,9 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5.2.0
         with:
-          go-version: "1.17.7"
+          go-version: '1.20.0'
       - name: Install protolint (ubuntu-latest)
         run: |
           sudo apt-get update --fix-missing
@@ -339,9 +339,9 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5.2.0
         with:
-          go-version: "1.17.7"
+          go-version: '1.20.0'
       - name: Install dependencies (ubuntu-latest)
         run: |
           sudo apt-get update --fix-missing
@@ -376,9 +376,9 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5.2.0
         with:
-          go-version: "1.17.7"
+          go-version: '1.20.0'
       - name: Install dependencies (ubuntu-latest)
         run: |
           sudo apt-get update --fix-missing
@@ -441,9 +441,9 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python_version }}
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5.2.0
         with:
-          go-version: "1.17.7"
+          go-version: '1.20.0'
       - if: matrix.os == 'ubuntu-latest'
         name: Install dependencies (ubuntu-latest)
         run: |
@@ -566,6 +566,6 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5.2.0
         with:
-          go-version: "1.17.7"
+          go-version: '1.20.0'
