--- a/strategy.ini
+++ b/strategy.ini
@@ -91,3 +91,5 @@ filelock: >=3.0.12
 fetchai-ledger-api: >=0.0.1
 chardet: >=3.0.4
 certifi: >=2019.11.28
+; licence is MIT, but the tool does not detect it
+attrs: ==24.3.0
